<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_rounded_corner_shape"
    tools:context=".ui.authentication.register.fragment.LocationDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/edit_text_shape"
            android:drawableRight="@drawable/arrow_down_spinner"
            android:fontFamily="@font/sf_pro_regular"
            android:hint="@string/select_country_of_origin"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/sf_pro_regular"
            android:hint="@string/state"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/sf_pro_regular"
            android:hint="@string/city"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/hintColor" />

        <TextView
            android:id="@+id/selectCommunityEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/sf_pro_regular"
            android:hint="@string/select_your_community"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/hintColor"
            app:drawableRightCompat="@drawable/arrow_down_spinner" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/locationDetailsNextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/green_btn_shape"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:minHeight="0dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>